# SerialBox

./: .gitignore  CMakeLists.txt  README.md  README_PLUGIN_DEV.md  REFACTOR_GUIDE.md  new.md  主题.docx  主题.html
build_new/: CMakeCache.txt  Makefile  cmake_install.cmake
build_new/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_new/SerialBox_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_new/SerialBox_autogen/6O3H6FHTZD/: moc_CustomFrameParser.cpp.d  moc_IProtocolParser.cpp.d  moc_JsonParser.cpp.d  moc_ModbusParser.cpp.d
build_new/SerialBox_autogen/NMTW66DRN2/: moc_Application.cpp.d  moc_ConfigManager.cpp.d
build_new/SerialBox_autogen/PZF2NRHHIK/: moc_AdvancedLabPlugin.cpp.d  moc_BerTesterPlugin.cpp.d  moc_ISerialPlugin.cpp.d  moc_PluginManager.cpp.d  moc_TestReportPlugin.cpp.d
build_new/SerialBox_autogen/VRHB53PXCB/: moc_JsonRpcServer.cpp.d  moc_SerialBridge.cpp.d
build_new/SerialBox_autogen/WSOFXCSDIR/: moc_CommandSidebar.cpp.d  moc_MainWindow.cpp.d  moc_ProtocolTreeView.cpp.d  moc_ReceivePanel.cpp.d  moc_SearchBar.cpp.d  moc_SendPanel.cpp.d  moc_SerialDialog.cpp.d  moc_SerialSettings.cpp.d  moc_StatusBar.cpp.d  moc_WaveformWidget.cpp.d  moc_WorkspaceModes.cpp.d
build_new/SerialBox_autogen/Y63P2UNTRJ/: moc_BackPressureQueue.cpp.d  moc_DataPipeline.cpp.d  moc_ISerialTransport.cpp.d  moc_SerialPort.cpp.d  moc_SerialPortManager.cpp.d
include/SerialBox/app/: Application.h  ConfigManager.h
include/SerialBox/core/: BackPressureQueue.h  DataPipeline.h  EncodingDetector.h  ISerialTransport.h  SerialPort.h  SerialPortManager.h
include/SerialBox/daemon/: JsonRpcServer.h  SerialBridge.h
include/SerialBox/plugin/: AdvancedLabPlugin.h  BerTesterPlugin.h  CrcCheckerPlugin.h  ISerialPlugin.h  PluginManager.h  TestReportPlugin.h
include/SerialBox/protocol/: CustomFrameParser.h  IProtocolParser.h  JsonParser.h  ModbusParser.h
include/SerialBox/python/: PythonEngine.h  ScriptRunner.h
include/SerialBox/ui/: CommandSidebar.h  MainWindow.h  ProtocolTreeView.h  ReceivePanel.h  SearchBar.h  SendPanel.h  SerialDialog.h  SerialSettings.h  StatusBar.h  WaveformWidget.h  WorkspaceModes.h
resources/: resources.qrc
resources/themes/: dark.qss  graphite.qss  light.qss  ocean.qss  professional.qss
src/: main.cpp
src/app/: Application.cpp  ConfigManager.cpp
src/core/: BackPressureQueue.cpp  DataPipeline.cpp  EncodingDetector.cpp  SerialPort.cpp  SerialPortManager.cpp
src/daemon/: JsonRpcServer.cpp  SerialBridge.cpp
src/plugin/: AdvancedLabPlugin.cpp  BerTesterPlugin.cpp  CrcCheckerPlugin.cpp  PluginManager.cpp  TestReportPlugin.cpp
src/protocol/: CustomFrameParser.cpp  JsonParser.cpp  ModbusParser.cpp
src/python/: PythonEngine.cpp  ScriptRunner.cpp
src/ui/: CommandSidebar.cpp  MainWindow.cpp  ProtocolTreeView.cpp  ReceivePanel.cpp  SearchBar.cpp  SendPanel.cpp  SerialDialog.cpp  SerialSettings.cpp  StatusBar.cpp  WaveformWidget.cpp  WorkspaceModes.cpp
